# Agris-Sim

./: .clang-format  .clangd  .gitignore  AgrisSim  CMakeList.txt  CMakeLists.txt  Dockerfile  JetBrainsMono-Light.ttf:Zone.Identifier  ReadMe.org  Todo.org  build.sh
.cache/clangd/index/: RANSAC.cpp.EB7D2F7368E07F84.idx  RPLidarC1sim.cpp.0EC793A264D796CE.idx  Sensors.cpp.B901189EECA04A78.idx  StateMachine.cpp.59D8C4C6CF262F7B.idx  autocontrol.cpp.4E4C48278D2369D9.idx  binary.h.1865EA851AC4E72C.idx  controller.cpp.30C49819CF06704C.idx  convert.h.52BA1DD520CD1851.idx  dll.h.08299A3811FD5070.idx  emit.h.616C209B4E766569.idx  emitter.h.4F1440157C186D9D.idx  emitterdef.h.1358E135EBA04EDD.idx  emittermanip.h.DF4F89833D5F5771.idx  emitterstyle.h.5B5C8508FC453265.idx  (+30 more)
Teensy_inc/: AGRIS.h  Config.h  MotorControl.h  Newpathplanner.h  Newpose.h  PID.h  PathFinder.h  Perception.h  Pose.h  RANSAC.h  StateMachine.h  datastructs.h  sketch.h
Teensy_include/: Config.h  LidarC1.h  PathFinder.h  Perception.h  Pose.h  RANSAC.h  StateMachine.h  datastructs.h  sketch.h
Teensy_src/: AGRIS.cpp  LidarC1.cpp  MotorControl.cpp  Newpathplanner.cpp  Newpose.cpp  PathFinder.cpp  Perception.cpp  Pose.cpp  RANSAC.cpp  StateMachine.cpp  sketch.cpp
config/: obstacles.yaml  robot.yaml  sim.yaml
hardwarecompat/: RPLidarC1sim.h
hwdrivers_inc/: LIS3MDL.h  LidarC1.h
include/: collision.h  controller.h  datalayer.h  inocompat.h  lidar.h  logger.h  obstacles.h  renderer.h  robot.h  sim.h  simconfig.h  types.h  vec.h  world.h
sim_inc/: lidar.h  logger.h  obstacles.h  renderer.h  robot.h  types.h  world.h
sim_src/: controller.cpp  lidar.cpp  logger.cpp  main.cpp  renderer.cpp  robot.cpp  world.cpp
simdriver_inc/: LIS3MDL.h  LSM6.h  LidarC1sim.h  QMC5883LCompass.h  RPLidarC1sim.h  SparkFun_u-blox_GNSS_Arduino_Library.h  inocompat.h
simdriver_src/: LidarC1sim.cpp  RPLidarC1sim.cpp
src/: autocontrol.cpp  collision.cpp  controller.cpp  inocompat.cpp  lidar.cpp  logger.cpp  main.cpp  obstacles.cpp  renderer.cpp  robot.cpp  sim.cpp  vec.cpp  world.cpp
teensy_include/: AGVPins.h  LSM6.h  RANSAC.h  RPLidarC1sim.h  Sensors.h  StateMachine.h  autocontrol.h  sketch.h
teensy_src/: RANSAC.cpp  RPLidarC1sim.cpp  Sensors.cpp  StateMachine.cpp  autocontrol.cpp  sketch.cpp
